--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.3",
     "@uploadcare/react-widget": "^2.4.7",
+    "add-to-calendar-button-react": "^2.8.9",
     "framer-motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
